fixed some bugs, new ones appeared

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -564,7 +564,8 @@
     "        if count == max_count:\n",
     "            break\n",
     "        img, y = test_data[idx]\n",
-    "        list_scores.append(model(img).flatten()[y].item())\n",
+    "        appe = model(img).flatten()[y].item()\n",
+    "        list_scores.append(appe)\n",
     "    count += 1"
    ]
   },
@@ -601,7 +602,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 129,
+   "id": "1b6d29f3-a31d-40fd-ae47-b60e65a98c20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, tensor(0.5456)),\n",
+       " (8, tensor(0.4384)),\n",
+       " (0, tensor(0.0153)),\n",
+       " (9, tensor(0.0005)),\n",
+       " (5, tensor(9.9149e-05)),\n",
+       " (4, tensor(9.4385e-05)),\n",
+       " (6, tensor(5.3252e-05)),\n",
+       " (2, tensor(3.5891e-07)),\n",
+       " (1, tensor(1.1974e-08)),\n",
+       " (7, tensor(2.6967e-10))]"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(enumerate(output.flatten()), key=lambda item: item[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "id": "7dff53ca-b354-45e0-812d-eeac544f8eca",
    "metadata": {},
    "outputs": [],
@@ -615,34 +646,39 @@
     "        if count == max_count:\n",
     "            break\n",
     "        img, y = test_data[idx]\n",
-    "        sorted_scores, _ = model(img).flatten().sort(descending=True)\n",
-    "        list_sum_scores.append(sorted_scores[:y+1].sum().item())\n",
+    "        sorted_scores = sorted(enumerate(model(img).flatten()), key=lambda item: item[1])\n",
+    "        sorted_correct = []\n",
+    "        for num, score in sorted_scores:\n",
+    "            sorted_correct.append(score)\n",
+    "            if num == y:\n",
+    "                break\n",
+    "        list_sum_scores.append(sum(sorted_correct).item())\n",
     "    count += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 150,
    "id": "70eab4e1-3520-4ccb-b0c2-8062a9b76d41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "q = np.quantile(list_scores, 0.9, method='lower')"
+    "q = np.quantile(list_sum_scores, 0.5, method='lower')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 151,
    "id": "c903b198-a5a3-4ab5-8a3f-2bd5bdd1d09f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999999403953552"
+       "0.003655075328424573"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
    "id": "75e99dca-105d-42ad-832f-4eb38d13eb3c",
    "metadata": {},
    "outputs": [],
@@ -663,81 +699,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "79160825-7091-4e5c-af38-8c0b5b67cff7",
+   "execution_count": 109,
+   "id": "b66488bd-2db8-4b2c-ad91-758e597e5d0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 3, 2])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "7bfdbbcf-7b5f-4787-a647-0fc66f36b38f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "b, _ = torch.sort(b, descending=True)"
+    "b_sorted = sorted(enumerate(b), key=lambda item: item[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "b15636e1-e2c3-4513-888c-f5e10df4fc7e",
+   "execution_count": 116,
+   "id": "a49fea6e-1730-4e66-8cc3-077ea69144d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([3, 2, 1])"
+       "[(0, tensor(1)), (2, tensor(2)), (1, tensor(3))]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
+    "b_sorted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "6f16b58b-252c-4aa0-b2ab-98773e518b63",
+   "execution_count": 130,
+   "id": "9698dd53-17d2-4cb9-abe0-b58985d40ac0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asd = []\n",
+    "for num, elem in b_sorted:\n",
+    "    asd.append(elem)\n",
+    "    if num == 2:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "503735a9-32e7-4203-8a0f-bc4927b36a34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([3, 2, 1])"
+       "[tensor(1), tensor(2)]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
+    "asd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "eac6d6bb-b777-450e-be1c-f585d0609b13",
+   "execution_count": 136,
+   "id": "e8c33ed5-cd46-4ffe-b399-18a2d7f02f56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([3, 2])"
+       "tensor(3)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b[:2]"
+    "sum(asd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed3e7a29-35c9-4104-b47a-706e8fbc036a",
+   "id": "fb59e36b-8190-4bd9-9b8e-7fc749995b57",
    "metadata": {},
    "outputs": [],
    "source": []
