--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -95,8 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "f77f0745-80fa-42a1-b73c-fae437d39757",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola cuki, I lo chu cuki\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hola cuki, I lo chu cuki\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdcb6b90-76cb-4473-8fac-a33e4fad5a9b",
    "metadata": {},
    "outputs": [],
    "source": []
