--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "id": "1996e0a6-a304-495a-9610-81f76a283838",
    "metadata": {},
    "outputs": [],
@@ -27,9 +27,9 @@
     "import numpy as np\n",
     "import torch\n",
     "from torch import nn\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import DataLoader, Subset\n",
     "from torchvision import datasets\n",
-    "from torchvision.transforms import ToTensor, Lambda"
+    "from torchvision.transforms import Lambda, ToTensor"
    ]
   },
   {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "id": "4b7e8298-7a0e-4a04-af22-f3404806d72f",
    "metadata": {},
    "outputs": [
@@ -244,13 +244,13 @@
        ")"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.eval()"
+    "model"
    ]
   },
   {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 96,
    "id": "3581dfb6-f1c3-42d8-86a3-76e9dbd18a1e",
    "metadata": {},
    "outputs": [
@@ -486,15 +486,15 @@
     }
    ],
    "source": [
-    "img = test_data[0][0]\n",
+    "img, y = test_data[0]\n",
     "plt.imshow(img.squeeze(), cmap=\"gray\")\n",
     "plt.show()\n",
-    "print(test_data[0][1])"
+    "print(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 97,
    "id": "29e08f4f-cad6-4218-ae27-33a47c20023c",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 98,
    "id": "ba17f9de-9b40-4a3a-a09d-25779f37c0d9",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        "1.0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,9 @@
   {
    "cell_type": "markdown",
    "id": "84544d26-7d7e-4108-8b09-314dd0582e9f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### not_so_sure"
    ]
@@ -582,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 99,
    "id": "c4ada498-16c0-4107-a97e-06f033e494ea",
    "metadata": {},
    "outputs": [
@@ -596,7 +598,7 @@
     }
    ],
    "source": [
-    "img = not_so_sure[1][0]\n",
+    "img, y = not_so_sure[1]\n",
     "with torch.no_grad():\n",
     "    output = model(img)\n",
     "print(output)"
@@ -604,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 100,
    "id": "f6178c84-c103-4eca-b6aa-96d4c1fabfab",
    "metadata": {},
    "outputs": [
@@ -629,7 +631,7 @@
    "source": [
     "plt.imshow(img.squeeze(), cmap=\"gray\")\n",
     "plt.show()\n",
-    "print(not_so_sure[1][1])"
+    "print(y)"
    ]
   },
   {
@@ -637,13 +639,72 @@
    "id": "566c7620-486f-4989-a94a-9547458a5c27",
    "metadata": {},
    "source": [
-    "### conformal \"training\""
+    "## conformal \"training\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "8d6a591f-d222-4f5b-bfd4-a7d419255663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_samples = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "f5a5e9b3-66e0-4a3c-bbf3-bf104f9444c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "8de62e5e-a45d-4026-b763-d7decdca1166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conformal_dataset = Subset(test_data, torch.arange(num_samples))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
    "id": "f4210c1f-219a-42e4-acbc-ea9420d1fde6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_scores = []\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    for img, y in conformal_dataset:\n",
+    "        if count == max_count:\n",
+    "            break\n",
+    "        img, y = elem\n",
+    "        appe = model(img).flatten()[y].item()\n",
+    "        list_scores.append(appe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "010abf91-4fa0-499b-91c1-4bfbeb3401d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +787,9 @@
    "cell_type": "code",
    "execution_count": 155,
    "id": "7dff53ca-b354-45e0-812d-eeac544f8eca",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
