--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -696,7 +696,9 @@
   {
    "cell_type": "markdown",
    "id": "b761941a-2605-4e38-b84a-4cbe607cba92",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Old method"
    ]
@@ -767,8 +769,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "3f390125-fae5-4c65-a1f5-0b65f60b85f5",
+   "execution_count": 95,
+   "id": "8848c1e0-6259-4b5d-adee-fb1ae88e917c",
    "metadata": {},
    "outputs": [
     {
@@ -785,9 +787,8 @@
     "with torch.no_grad():\n",
     "    for img, y in conformal_dataset:\n",
     "        scores = list(enumerate(model(img).flatten()))\n",
-    "        scores_until_correct = [score for num, score in scores if num == y or score >= scores[y][1]]\n",
-    "        list_sum_scores.append(sum(scores_until_correct))\n",
-    "    print(list_sum_scores)"
+    "        scores_until_correct = [score for num, score in scores if score >= scores[y][1]]  # or num == y\n",
+    "        list_sum_scores.append(sum(scores_until_correct))"
    ]
   },
   {
