added insights on classifier

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -18,13 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 211,
    "id": "1996e0a6-a304-495a-9610-81f76a283838",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import torch\n",
     "from math import ceil\n",
     "from torch import nn\n",
@@ -872,18 +873,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 222,
+   "id": "ec6f149d-e056-4cb4-93df-ad5dcdce4f0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_predictions_data(data):\n",
+    "    df = pd.DataFrame(columns=['true_class', 'prediction_list'])\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        for idx, elem in enumerate(data):\n",
+    "            img, y = elem\n",
+    "            df.loc[len(df)] = {'true_class': y, 'prediction_list': get_prediction_list(img)}\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "999f0dfc-1560-4169-8c93-856705b9f1a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9900\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "remaining_test_data = Subset(test_data, torch.arange(num_samples, len(test_data)))\n",
     "print(len(remaining_test_data))"
@@ -891,8 +901,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "ec6f149d-e056-4cb4-93df-ad5dcdce4f0b",
+   "execution_count": 221,
+   "id": "9513a21f-2314-4c7d-af0d-d782c1dae151",
    "metadata": {},
    "outputs": [
     {
@@ -10800,14 +10810,117 @@
       "index: 9898, 5, [8, 6, 4, 0, 5, 1, 9, 2, 3]\n",
       "index: 9899, 6, [6]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>true_class</th>\n",
+       "      <th>prediction_list</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>[6, 2, 8, 4, 0, 5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 8, 2]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[9, 8, 3, 7, 0, 5, 4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[4, 9]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9</td>\n",
+       "      <td>[9, 4, 8, 7, 3, 5, 2, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9895</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[2]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9896</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[3, 2]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9897</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[4, 9, 8]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9898</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[8, 6, 4, 0, 5, 1, 9, 2, 3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9899</th>\n",
+       "      <td>6</td>\n",
+       "      <td>[6]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9900 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      true_class              prediction_list\n",
+       "0              6           [6, 2, 8, 4, 0, 5]\n",
+       "1              0                    [0, 8, 2]\n",
+       "2              5        [9, 8, 3, 7, 0, 5, 4]\n",
+       "3              4                       [4, 9]\n",
+       "4              9     [9, 4, 8, 7, 3, 5, 2, 0]\n",
+       "...          ...                          ...\n",
+       "9895           2                          [2]\n",
+       "9896           3                       [3, 2]\n",
+       "9897           4                    [4, 9, 8]\n",
+       "9898           5  [8, 6, 4, 0, 5, 1, 9, 2, 3]\n",
+       "9899           6                          [6]\n",
+       "\n",
+       "[9900 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "model.eval()\n",
-    "with torch.no_grad():\n",
-    "    for idx, elem in enumerate(remaining_test_data):\n",
-    "        img, y = elem\n",
-    "        print(f\"index: {idx}, {y}, {get_prediction_list(img)}\")"
+    "results = run_predictions_data(remaining_test_data)\n",
+    "display(results)"
    ]
   },
   {
@@ -10825,6 +10938,72 @@
    "source": [
     "Let's see the average list size for correctly predicted classes vs incorrect ones."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aed9535b-cf03-4c98-8399-1887f2858dae",
+   "metadata": {},
+   "source": [
+    "**No hi ha classes correctes i incorrectes com a tal, però entenc que no té sentit retornar el conjunt sense ordre...**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "id": "01d34277-6840-41a4-8594-39f96552aaf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sizes_correct = {length: 0 for length in range(1, 11)}\n",
+    "sizes_incorrect = {length: 0 for length in range(1, 11)}\n",
+    "\n",
+    "def calculate_sizes(row):\n",
+    "    if row['true_class'] == row['prediction_list'][0]:\n",
+    "        sizes_correct[len(row['prediction_list'])] += 1\n",
+    "    else:\n",
+    "        sizes_incorrect[len(row['prediction_list'])] += 1\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    results.apply(calculate_sizes, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "3e130a40-c202-4f8a-a028-c0dc608fe157",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.189335212591026\n",
+      "7.163059163059162\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_correct = sum(sizes_correct.values())\n",
+    "num_incorrect = sum(sizes_incorrect.values())\n",
+    "\n",
+    "relative_correct = {length: size/num_correct for length, size in sizes_correct.items()}\n",
+    "relative_incorrect = {length: size/num_incorrect for length, size in sizes_incorrect.items()}\n",
+    "\n",
+    "avg_size_correct = sum(length*percent for length, percent in relative_correct.items())\n",
+    "avg_size_incorrect = sum(length*percent for length, percent in relative_incorrect.items())\n",
+    "\n",
+    "print(avg_size_correct)\n",
+    "print(avg_size_incorrect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33538575-7b47-4f66-9b0e-ce3bf47e54f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
