--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -192,7 +192,7 @@
    "id": "1ee8f254-9f76-41f4-ac52-79daf7941227",
    "metadata": {},
    "source": [
-    "## Multilayer perceptron (Number Network)\n",
+    "## Multilayer perceptron\n",
     "### Definition"
    ]
   },
@@ -684,16 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "e618e75d-6fcf-49ee-bbc8-3b88a8973fa8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "num_samples = 100\n",
     "alpha = 0.1"
    ]
   },
@@ -704,7 +695,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conformal_dataset = Subset(test_data, torch.arange(num_samples))"
+    "calib_dataset = Subset(test_data, torch.arange(num_samples))"
    ]
   },
   {
@@ -727,7 +718,7 @@
     "list_scores = []\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
-    "    for img, y in conformal_dataset:\n",
+    "    for img, y in calib_dataset:\n",
     "        correct_class_score = model(img).flatten()[y]\n",
     "        list_scores.append(correct_class_score)"
    ]
@@ -779,7 +770,7 @@
     "list_sum_scores = []\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
-    "    for img, y in conformal_dataset:\n",
+    "    for img, y in calib_dataset:\n",
     "        scores = list(enumerate(model(img).flatten()))\n",
     "        scores_until_correct = [score for num, score in scores if score >= scores[y][1]]  # or num == y\n",
     "        list_sum_scores.append(sum(scores_until_correct))"
