--- a/Regressor.ipynb
+++ b/Regressor.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c937a484-2cd9-407d-ba09-1a21a248a9cb",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "eb3208d0-f318-4974-963b-90fc874d660a",
@@ -19,6 +27,14 @@
     "from sklearn.datasets import fetch_california_housing\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "608ad694-2abb-497c-a5b5-84cf11ae53ac",
+   "metadata": {},
+   "source": [
+    "### Train and test datasets"
    ]
   },
   {
@@ -61,7 +77,23 @@
    "outputs": [],
    "source": [
     "X, y = housing.data, housing.target\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c397901f-cc07-4a57-9b09-af2aed77007f",
+   "metadata": {},
+   "source": [
+    "## Gradient Boosting Regressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4e42212-119a-47ba-8ad7-b0a172cb9a69",
+   "metadata": {},
+   "source": [
+    "### Hyperparameters and loss function"
    ]
   },
   {
@@ -87,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "id": "e9482d27-11c2-4d47-b74b-0111af79f108",
    "metadata": {},
    "outputs": [
@@ -95,23 +127,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coverage: 0.90\n"
+      "Lower quantile: 0.05, upper quantile: 0.95, coverage: 0.9\n"
      ]
     }
    ],
    "source": [
-    "upper_alpha = 0.95\n",
-    "lower_alpha = 1-upper_alpha\n",
-    "print(\"Coverage: %.2f\" % (upper_alpha-lower_alpha))"
+    "alpha = 0.1\n",
+    "lq = alpha/2\n",
+    "uq = 1-lq\n",
+    "print(f\"Lower quantile: {lq}, upper quantile: {uq}, coverage: {1-alpha}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6d7c947b-562f-42e7-a38f-b6b79465e466",
+   "id": "f138ec9f-ceab-4e0c-964e-96f5142dee4a",
    "metadata": {},
    "source": [
-    "lq = lower quantile\\\n",
-    "uq = upper quantile"
+    "### Training"
    ]
   },
   {
@@ -129,8 +161,8 @@
     }
    ],
    "source": [
-    "gbr_lq = GradientBoostingRegressor(loss=loss, learning_rate=learning_rate, n_estimators=n_estimators, alpha=lower_alpha)\n",
-    "gbr_uq = GradientBoostingRegressor(loss=loss, learning_rate=learning_rate, n_estimators=n_estimators, alpha=upper_alpha)\n",
+    "gbr_lq = GradientBoostingRegressor(loss=loss, learning_rate=learning_rate, n_estimators=n_estimators, alpha=lq)\n",
+    "gbr_uq = GradientBoostingRegressor(loss=loss, learning_rate=learning_rate, n_estimators=n_estimators, alpha=uq)\n",
     "gbr = GradientBoostingRegressor(learning_rate=learning_rate, n_estimators=n_estimators)\n",
     "\n",
     "gbr_lq.fit(X_train, y_train)\n",
@@ -141,15 +173,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e166fab1-b594-4531-8088-12b0cbf1f72d",
+   "metadata": {},
+   "source": [
+    "### Predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "46410695-c1bb-4357-8a0e-2d2f06b4f0b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_lower = gbr_lq.predict(X_val)\n",
-    "y_upper = gbr_uq.predict(X_val)\n",
-    "y_pred = gbr.predict(X_val)"
+    "y_lower = gbr_lq.predict(X_test)\n",
+    "y_upper = gbr_uq.predict(X_test)\n",
+    "y_pred = gbr.predict(X_test)"
    ]
   },
   {
@@ -168,11 +208,11 @@
    "outputs": [],
    "source": [
     "#fig = plt.figure(figsize=(10, 10))\n",
-    "#plt.plot(X_val, y_val, \"b.\", markersize=10, label=\"Test observations\")\n",
-    "#plt.plot(X_val, y_upper, \"k-\")\n",
-    "#plt.plot(X_val, y_lower, \"k-\")\n",
+    "#plt.plot(X_test, y_test, \"b.\", markersize=10, label=\"Test observations\")\n",
+    "#plt.plot(X_test, y_upper, \"k-\")\n",
+    "#plt.plot(X_test, y_lower, \"k-\")\n",
     "#plt.fill_between(\n",
-    "#    X_val.ravel(), y_lower, y_upper, alpha=0.4, label=\"Predicted 90% interval\"\n",
+    "#    X_test.ravel(), y_lower, y_upper, alpha=0.4, label=\"Predicted 90% interval\"\n",
     "#)\n",
     "#plt.xlabel(\"$x$\")\n",
     "#plt.ylabel(\"$f(x)$\")\n",
@@ -203,11 +243,11 @@
     "plt.figure(figsize=(10, 6))\n",
     "plt.scatter(y_train, gbr.predict(X_train), color='blue', alpha=0.5, label='Training data')\n",
     "# Scatter plot for testing data\n",
-    "plt.scatter(y_val, gbr.predict(X_val), color='red', alpha=0.5, label='Testing data')\n",
+    "plt.scatter(y_test, gbr.predict(X_test), color='red', alpha=0.5, label='Testing data')\n",
     "\n",
     "# Plotting the perfect fit line\n",
-    "max_val = max(y_train.max(), y_val.max())\n",
-    "plt.plot([0, max_val], [0, max_val], color='black', linestyle='--')\n",
+    "maX_test = max(y_train.max(), y_test.max())\n",
+    "plt.plot([0, maX_test], [0, maX_test], color='black', linestyle='--')\n",
     "\n",
     "plt.title('Actual vs. Predicted')\n",
     "plt.xlabel('Actual values')\n",
@@ -240,14 +280,14 @@
     "\n",
     "# Assuming you have y_test (actual values) and y_pred (predicted values)\n",
     "# Calculate evaluation metrics\n",
-    "mae = mean_absolute_error(y_val, y_pred)\n",
-    "mse = mean_squared_error(y_val, y_pred)\n",
-    "r2 = r2_score(y_val, y_pred)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
     "\n",
     "# Create scatter plot\n",
     "plt.figure(figsize=(8, 6))\n",
-    "plt.scatter(y_val, y_pred, alpha=0.7, color='b', label='Predictions')\n",
-    "plt.plot([min(y_val), max(y_val)], [min(y_val), max(y_val)], 'k--', lw=2, label='Ideal Line')\n",
+    "plt.scatter(y_test, y_pred, alpha=0.7, color='b', label='Predictions')\n",
+    "plt.plot([min(y_test), max(y_test)], [min(y_test), max(y_test)], 'k--', lw=2, label='Ideal Line')\n",
     "plt.xlabel('Actual Values')\n",
     "plt.ylabel('Predicted Values')\n",
     "plt.title('Regression Model: Actual vs. Predicted')\n",
@@ -262,9 +302,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80e0f174-82d1-49b7-9544-0a43cb356dd7",
+   "metadata": {},
+   "source": [
+    "## Conformal prediction and uncertainty quantification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "6fa5e0b9-293f-4aa7-ae6c-b9b5d036651f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4128"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3162e07d-24d6-473d-aa92-580c4b1a2296",
+   "id": "32869a6a-f4c8-4c7b-bfe2-f16d22dbdf98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_samples = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "727c98e6-b816-4433-9431-c36153157fef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_calib, y_calib = X_test[:num_samples], y_test[:num_samples]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3353a743-aafd-4de6-86e6-bdc13a6c94d8",
    "metadata": {},
    "outputs": [],
    "source": []
