conformalized regressor done

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -762,6 +762,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "id": "27685cd5-6ddb-4ca9-b99b-cfd5e2c38c41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NumberNetwork(\n",
+       "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+       "  (linear_relu_stack): Sequential(\n",
+       "    (0): Linear(in_features=784, out_features=512, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
+       "    (3): ReLU()\n",
+       "    (4): Linear(in_features=512, out_features=10, bias=True)\n",
+       "    (5): Softmax(dim=1)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "8d87e6a4-d304-4d5f-9473-b95066aa1235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Es podria fer més d'una predicció alhora amb DataLoader si es treballa amb GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "id": "8848c1e0-6259-4b5d-adee-fb1ae88e917c",
    "metadata": {},
