--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -10,19 +10,484 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6b91ccf0-c438-4bb2-b705-f4615041e210",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !wget https://files.grouplens.org/datasets/movielens/ml-latest-small.zip\n",
-    "# !unzip -o ml-latest-small.zip"
+    "# !wget https://files.grouplens.org/datasets/movielens/ml-1m.zip\n",
+    "# !unzip -o ml-1m.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "cfb0c761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from collections import Counter\n",
+    "from itertools import chain\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "160d5627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users = pd.read_csv('data/ml-1m/users.dat', sep='::', engine='python', names=['userID', 'gender', 'age', 'occupation', 'zipCode'])\n",
+    "movies = pd.read_csv('data/ml-1m/movies.dat', sep='::', engine='python', names=['movieID', 'title', 'genres'], encoding='latin-1')\n",
+    "ratings = pd.read_csv('data/ml-1m/ratings.dat', sep='::', engine='python', names=['userID', 'movieID', 'rating', 'timestamp'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a78b0e18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows: 6040\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userID</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>zipCode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>M</td>\n",
+       "      <td>56</td>\n",
+       "      <td>16</td>\n",
+       "      <td>70072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25</td>\n",
+       "      <td>15</td>\n",
+       "      <td>55117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>45</td>\n",
+       "      <td>7</td>\n",
+       "      <td>02460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>55455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userID gender  age  occupation zipCode\n",
+       "0       1      F    1          10   48067\n",
+       "1       2      M   56          16   70072\n",
+       "2       3      M   25          15   55117\n",
+       "3       4      M   45           7   02460\n",
+       "4       5      M   25          20   55455"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"rows:\", users.shape[0])\n",
+    "users.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3c18875d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows: 3883\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieID</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "      <td>Animation|Children's|Comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jumanji (1995)</td>\n",
+       "      <td>Adventure|Children's|Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Grumpier Old Men (1995)</td>\n",
+       "      <td>Comedy|Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Waiting to Exhale (1995)</td>\n",
+       "      <td>Comedy|Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Father of the Bride Part II (1995)</td>\n",
+       "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movieID                               title                        genres\n",
+       "0        1                    Toy Story (1995)   Animation|Children's|Comedy\n",
+       "1        2                      Jumanji (1995)  Adventure|Children's|Fantasy\n",
+       "2        3             Grumpier Old Men (1995)                Comedy|Romance\n",
+       "3        4            Waiting to Exhale (1995)                  Comedy|Drama\n",
+       "4        5  Father of the Bride Part II (1995)                        Comedy"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"rows:\", movies.shape[0])\n",
+    "movies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5b649241",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows: 1000209\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userID</th>\n",
+       "      <th>movieID</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1193</td>\n",
+       "      <td>5</td>\n",
+       "      <td>978300760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>661</td>\n",
+       "      <td>3</td>\n",
+       "      <td>978302109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>914</td>\n",
+       "      <td>3</td>\n",
+       "      <td>978301968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3408</td>\n",
+       "      <td>4</td>\n",
+       "      <td>978300275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2355</td>\n",
+       "      <td>5</td>\n",
+       "      <td>978824291</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userID  movieID  rating  timestamp\n",
+       "0       1     1193       5  978300760\n",
+       "1       1      661       3  978302109\n",
+       "2       1      914       3  978301968\n",
+       "3       1     3408       4  978300275\n",
+       "4       1     2355       5  978824291"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"rows:\", ratings.shape[0])\n",
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "6a1ac486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_genres: 18\n",
+      " {'Drama': 1603, 'Comedy': 1200, 'Action': 503, 'Thriller': 492, 'Romance': 471, 'Horror': 343, 'Adventure': 283, 'Sci-Fi': 276, \"Children's\": 251, 'Crime': 211, 'War': 143, 'Documentary': 127, 'Musical': 114, 'Mystery': 106, 'Animation': 105, 'Fantasy': 68, 'Western': 68, 'Film-Noir': 44}\n"
+     ]
+    }
+   ],
+   "source": [
+    "genres = movies[\"genres\"].apply(lambda x: x.split(\"|\"))\n",
+    "genres = chain.from_iterable(genres)\n",
+    "count_genres = dict(Counter(genres))\n",
+    "print(f\"num_genres: {len(count_genres)}\\n\", dict(sorted(count_genres.items(), key=lambda item: item[1], reverse=True)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "dcc5c18e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([\"Animation|Children's|Comedy\", \"Adventure|Children's|Fantasy\",\n",
+       "       'Comedy|Romance', ..., 'Drama', 'Drama', 'Drama|Thriller'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies[\"genres\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "02944626",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lower=False?\n",
+    "tokenizer = Tokenizer(split='|', filters='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "89370bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.fit_on_texts(movies[\"genres\"].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "75b57e3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'drama': 1,\n",
+       " 'comedy': 2,\n",
+       " 'action': 3,\n",
+       " 'thriller': 4,\n",
+       " 'romance': 5,\n",
+       " 'horror': 6,\n",
+       " 'adventure': 7,\n",
+       " 'sci-fi': 8,\n",
+       " \"children's\": 9,\n",
+       " 'crime': 10,\n",
+       " 'war': 11,\n",
+       " 'documentary': 12,\n",
+       " 'musical': 13,\n",
+       " 'mystery': 14,\n",
+       " 'animation': 15,\n",
+       " 'fantasy': 16,\n",
+       " 'western': 17,\n",
+       " 'film-noir': 18}"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.word_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "226f4b42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq = tokenizer.texts_to_sequences(movies[\"genres\"].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "91649392",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15,  9,  2],\n",
+       "       [ 7,  9, 16],\n",
+       "       [ 2,  5,  0],\n",
+       "       ...,\n",
+       "       [ 1,  0,  0],\n",
+       "       [ 1,  0,  0],\n",
+       "       [ 1,  4,  0]])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pad_sequences(seq, maxlen=3,padding='post')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8ded21e-ea57-4895-9551-1119f9dbc30f",
+   "id": "1f7b9ce3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -44,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
