--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6b91ccf0-c438-4bb2-b705-f4615041e210",
    "metadata": {},
    "outputs": [],
@@ -21,10 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "id": "cfb0c761",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-11 18:06:34.921639: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -345,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "6a1ac486",
    "metadata": {},
    "outputs": [
@@ -367,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "id": "dcc5c18e",
    "metadata": {},
    "outputs": [
@@ -379,7 +388,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "id": "02944626",
    "metadata": {},
    "outputs": [],
@@ -401,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "id": "89370bfb",
    "metadata": {},
    "outputs": [],
@@ -411,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "id": "75b57e3e",
    "metadata": {},
    "outputs": [
@@ -438,7 +447,7 @@
        " 'film-noir': 18}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "id": "226f4b42",
    "metadata": {},
    "outputs": [],
@@ -459,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "id": "91649392",
    "metadata": {},
    "outputs": [
@@ -472,10 +481,10 @@
        "       ...,\n",
        "       [ 1,  0,  0],\n",
        "       [ 1,  0,  0],\n",
-       "       [ 1,  4,  0]])"
+       "       [ 1,  4,  0]], dtype=int32)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
